# llvm-hse-2023

./: .gitignore  README.md
hw01/: CMakeLists.txt  README.md  graphics.h  life.c  life.h  main.c
hw01/sim/: CMakeLists.txt  sim.c  sim.h
hw02/: README.md  log_parser.cpp  logger.c  pass.cpp  pass.txt  run.sh
hw03/: README.md  in.ll  out.cpp  out.ll  parser.py  run.sh
